<resources>
    <string name="app_name">MyAppNews</string>
    <string name="News_splash_name">welcome to VNI</string>
    <string name="Start_sing_name">welcome to \n namarium</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_in">Sign In</string>
    <string name="Name">Name</string>
    <string name="Create_Account">Create\nAccount</string>
    <string name="welcome_back">Welcome \n Back</string>
    <string name="Email_hint">Email</string>
    <string name="PassWord_hint">PassWord</string>

    <string name="news">News</string>
    <string name="Search">Dictionary</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_present_item_article">1 dong doi 2 so phan yeu nguoi ma minh khong yeu la nhu the nao vay moi nguoi oi toi yeu em </string>
    <string name="present_tittle_article_page">Artist Puts Re-imagined Spanish Painting on Venezuelan Streets</string>
    <string name="present_time_article_page">2024-01-19 22:30:19</string>
    <string name="present_content">.A collection of modern statues has been placed around Venezuela\'s capital Caracas in an attempt to increase local interest in art. A total of 19 fiberglass pieces – created by Venezuelan artist Antonio Azzato – are sitting in public spaces around the city. The statues are modeled after the famous 17th-century painting “Las Meninas” by Spanish artist Diego Velazquez. That piece shows a young princess, Margaret Theresa, being assisted by two helpers. The painting is displayed in Madrid\'s Prado museum. The larger-than-life statues, or figures, appear in Caracas in modern, colorful designs. They show the same rounded dress shape as the princess in the Velazquez painting. The tops have a head, but no face. The figures are made to look like different people or things. One is painted to look like Gleyber Torres, a baseball player with the New York Yankees who comes from Venezuela. Another represents singer Oscar D\'Leon, while others are painted to look like colorful birds or flowers. Azzato told Reuters news agency his street statues are designed to give the public a break from technology and the modern world. He hopes the street placements will persuade people to briefly stop and think about art.\n
    He added he hopes the figures will lead people – particularly younger ones – to be curious about the pieces and “to look closer” at the statues and their meaning.A collection of modern statues has been placed around Venezuela\'s capital Caracas in an attempt to increase local interest in art. A total of 19 fiberglass pieces – created by Venezuelan artist Antonio Azzato – are sitting in public spaces around the city. The statues are modeled after the famous 17th-century painting “Las Meninas” by Spanish artist Diego Velazquez. That piece shows a young princess, Margaret Theresa, being assisted by two helpers. The painting is displayed in Madrid\'s Prado museum. The larger-than-life statues, or figures, appear in Caracas in modern, colorful designs. They show the same rounded dress shape as the princess in the Velazquez painting. The tops have a head, but no face. The figures are made to look like different people or things. One is painted to look like Gleyber Torres, a baseball player with the New York Yankees who comes from Venezuela. Another represents singer Oscar D\'Leon, while others are painted to look like colorful birds or flowers. Azzato told Reuters news agency his street statues are designed to give the public a break from technology and the modern world. He hopes the street placements will persuade people to briefly stop and think about art.\n
    He added he hopes the figures will lead people – particularly younger ones – to be curious about the pieces and “to look closer” at the statues and their meaning</string>
    <string name="universities">Universities</string>
    <string name="nguon">Nguồn:</string>
    <string name="tatca">Tất cả</string>
    <string name="chude">Chủ đề</string>
    <string name="dong">Đóng</string>
    <string name="search">Search</string>
    <string name="downloaded">DownLoaded</string>
    <string name="trangthai">Trạng thái:</string>
    <string name="confirm_password">Confirm Password</string>
</resources>