<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_start_sign">


    <ImageView
        android:id="@+id/primary_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_arc" />

    <ImageView
        android:id="@+id/primary_image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_arc" />

    <ImageView
        android:id="@+id/primary_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/start_sign" />

    <TextView
        android:id="@+id/text_start_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Start_sing_name"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/primary_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignIn_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/PRIMARY_TEXT"
        android:textSize="26sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_image"
        app:layout_constraintVertical_bias="0.22" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUp_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"        android:layout_marginTop="30dp"
        android:text="@string/Sign_up"
        android:textColor="@color/PRIMARY_TEXT"
        android:textSize="26sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>