<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/article_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_scrollFlags="enterAlways">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/btnbackar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/back_24" />

            <Space
                android:layout_width="310dp"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/btnApprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/icstamp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/icedit24" />


        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView

        android:id="@+id/ar_scr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_page_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="serif"
                    android:text="@string/present_tittle_article_page"
                    android:textColor="@color/PRIMARY_TEXT"
                    android:textFontWeight="100"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_page_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:text="@string/present_time_article_page"
                    android:textColor="@color/SECONDARY_TEXT" />


                <ImageView
                    android:id="@+id/img_article_page"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:scaleType="fitXY"
                    android:src="@drawable/article_page_image" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />


                <TextView
                    android:id="@+id/txt_page_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:ellipsize="end"
                    android:lineSpacingExtra="2dp"
                    android:padding="8dp"
                    android:text="@string/present_content"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>