<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_above="@+id/bottombar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_page_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="serif"
                    android:text="@string/present_tittle_article_page"
                    android:textColor="@color/PRIMARY_TEXT"
                    android:textFontWeight="100"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_page_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:text="@string/present_time_article_page"
                    android:textColor="@color/SECONDARY_TEXT" />

                <ImageView
                    android:id="@+id/img_article_page"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:scaleType="fitXY"
                    android:src="@drawable/article_page_image" />

                <TextView
                    android:id="@+id/txt_page_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_article_page"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/present_content"
                    android:textColor="@color/PRIMARY_TEXT"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/text_size_mid" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="30dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="horizontal"
            app:layout_scrollFlags="exitUntilCollapsed">

            <ImageView
                android:id="@+id/decree5s"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_replay5s" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_play24" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_forward5s" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/text_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0:00"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seekPageContent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/text_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0:00"
                android:textColor="@color/white" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_speed_run24" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/ic_download24" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_forward5s" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.appbar.AppBarLayout>


</RelativeLayout>